changed resolv.conf location to fix coredns crash loop

--- a/ansible/inventory/host_vars/k8s-worker1.sops.yml
+++ b/ansible/inventory/host_vars/k8s-worker1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:0uHIt5bO,iv:hhUTa8vijfFUCFfH3gyo7oVS2CKp6J+papnVF7z1eWY=,tag:qJ9W3YTl0Zp6uFpAoxz56Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:2P9ayZJqbqo/eNg=,iv:9Ih5+QJ2gmcU/IkSMahXn0awdoMZc0yWKjHn2yv5gCI=,tag:5GAlJdYpiQwaShxDwrbqiA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:ml8llInBvMXM4f1dn0uHFA==,iv:NpMEt8LCHrmLRMBbqv59o0kSvaQD/Dr9OcNZiBsSNvg=,tag:CcZPDcdvBIhZQoCmLAYKEw==,type:str]
+kind: ENC[AES256_GCM,data:uoQmq0L4,iv:AcC3JR1VbJo5tQ97pLvol7P9Yv3T018+gpVS2+ulkc4=,tag:Z5JBPG5U7ZtXLgD+zUKpJg==,type:str]
+ansible_user: ENC[AES256_GCM,data:OHjTe1G1vmGMoc0=,iv:coZFC8KFrxYaalMM66OYfAZW/xpqnd711v0FSfKg9VM=,tag:zmU5dGPmBwlpd1hPlwCR6w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:apsg7UkGMxnG4786x/V6lA==,iv:9zzyaOSIo/KXo5c9i9AvB7f58RLysM0rQiAJGHzI1Ug=,tag:ivS+g/B9s84RggDkDeDVwQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1vf3lpxn7ff7nghesqm56g6jnvne82gps5ytplxxw62mg9wsy6pnqt0p4fr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6akExeXJicGsrajFDMjA5
-            UmJ2TjYyeUVrNnJLNm9KK051bVdlZHY2ajFJClNGOWJ4dkU4OVJPOTVkRS90OUgx
-            QUR1a0Q0eC90cDZkZHkxa0laZWgrOFEKLS0tIGZGK2Era3VkWU1nejE4NmdzTHJm
-            Z1k3dTNyT1R2TTNTdjZyY3p2Zm15dUkKG73xS+XJxPPQCTcZvjzxh3YLieo2gzdd
-            fcUPv7RUMxeOxiQpYPWN+V1YvTDAZD1uIX8D21GrxAUp3ibZ+wR9Fw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZcldWbFNMQ1JGR2YzQ0ZN
+            K1lSd2NGV0ZrUUxxZFg4TmRnZ2FCMGZvMW1vCkJnc2pEOFh5dnNwTkpnQlNaeEJL
+            NVBQVVZEdnV0MHFsUnBOVkNaOU5TZ28KLS0tIHFlTWtJRDAyTkxvYzhOMkF0RUhT
+            cGNRdUdJY29SN25URzV1ZWNPRjFnS0EKDq+hGMGYv1naDIDpVVfJKSEvtsbD6IUj
+            FUDbHbPvDUf8hA6YdWwyy11urjCzpiYdfGL/6Zv/+OgOPAOglMIPiA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T20:32:35Z"
-    mac: ENC[AES256_GCM,data:ARrnOW5WrsUAcaM8foUCJWZsFQy1VfLTRQuZuAj66QLLbOjobcFLaWmvBl+EFLs/+BDO5KzD+2fUTp+EB/hMmQD6GwRGcfPCIMhw7H5PkbxtueGgov5jufRupb74NJ4qlARdDE/UuSZRh2h8/87H341u5yAuI0DPLRsBimJ2Ef8=,iv:8jgOUVb2asTyXOfKHG0+oYRDxKNwsH4Ms8qCP/DMlMo=,tag:ttqxQM6P9N5PNZ0CAVUW2Q==,type:str]
+    lastmodified: "2023-02-13T21:44:03Z"
+    mac: ENC[AES256_GCM,data:hq+kDml/7W6qwet5as74QFvbPKQ2RBD1Md88V6U1ulXtU+NW0Ge05Lu+ZpW1K7W5WcYZm1q2OmNgUurSg9vGCOIWrBkiW+u4E79FAB1mC51IYUwA5PJPfaMvGiyh5endBx8TTx9kLFon77+3wk2zWA4d0QEVyEPx0XneoMhZuAc=,iv:qwCOlO/K3eksDJBrekZ3niSJObRK1vH2PJn5xii2pso=,tag:lAGeNJAy7XrdgwBsbZJy0g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
