--- a/ansible/inventory/host_vars/k8s-worker2.sops.yml
+++ b/ansible/inventory/host_vars/k8s-worker2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:xCHt5n5e,iv:vbdEXXs2b9uv8PPYogPGxrEmXJnd8n2yOvaMvl463n8=,tag:3xSW12Js3TPqt8JdQr2EKQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:YbMkDRVkn7ibZyo=,iv:QLbquE2l1yYn0oHsjUKV/95MS6stpyqHpCGckyI6iAA=,tag:ArR7EkRUmLKUsEK2RykzTA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:6XDwLnWVJJf0IVOTgNTDaQ==,iv:pl1qGBCZ9rf/Ixk1ShB507C8bHMUOAUPHySYpdZ7jis=,tag:paKzBNNfCNbhNG++9Wa7nQ==,type:str]
+kind: ENC[AES256_GCM,data:AIII+CV+,iv:Mr49VblSud0hG5Sttd5y5tczdcFFL3NNc7Wg2lQVcIk=,tag:noL3popcL5bYkHGyqpdBAw==,type:str]
+ansible_user: ENC[AES256_GCM,data:2+4osStC9sSHiw8=,iv:p+vcnm5/susbHPOZpWsyty3GORt0eHhfMKNZ+/d28rA=,tag:vZWuBQiyjLQ062G+HddSGg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:E5Hx5yfGAXnRui9vqUd0cA==,iv:IUoWai3AYx62ntz6YiA96bGyk6KzxGoLkIk5L5DcJss=,tag:Ym/9YB23KPQ00qXVpZBH/w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1vf3lpxn7ff7nghesqm56g6jnvne82gps5ytplxxw62mg9wsy6pnqt0p4fr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyeTZSVVNzeEo4ODVWeWMx
-            dmlMSEdMbGxmS2s1U25kTW1TbmRic0xLUENVCkJnZjBrWnB3MWtORzRWdnZJRm1M
-            Tmp3YkpsYldUako4SDhHWlNINjF2WGsKLS0tIHU3T2tBWGNFRjE1M0JQWWZUY0VW
-            VmttOVloVDVzZDQrN2V2NmNodlpkZmMKztMn8ZT0S7TFr6sz/YqNsD4pf1b1z7lF
-            9GxNi0UQ5uRo+OwoQGt/8g//9sErnr3Pe0vDmlEr+dB/3sIskyfhbA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNeTlVczJBOTlrdjdWWFI5
+            a3pIU2JFQkh0dVA3Ui8xMFhuZlRpTzh5OWxrCnI2c29nSFJuTVBZVGF5OUI1elgy
+            SXVwWXNnVlBqbFFqTmtOS0xjMm4rSXcKLS0tIFNCODFBK1draEhnVGtTUXM4Y2U3
+            Z2Y2S0pkeEhCcndhZnU4N014ZjZsQnMK02tUb2X4FbHTRFC/MRafJ9hVNKxCwPt7
+            E3yaZi4U8KwsSK1CAV+iwydG+eeRQQsrbzIXb+ihm1VBue1o7rayeQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T20:32:35Z"
-    mac: ENC[AES256_GCM,data:HtZT8b/g5XOfWh2pD50xbupPOrWABreeo1t0yUYOJcDsdm8TKp3nEMllHAfrkPaR8VPl+QDwp9GdG5IxEUuOeIGNEGlIgd7DIZDfJm+Yd3S9cUSYvPUeYLxvr8Bj2LTfUNNlkz4xIyn/kXHnoMT2Q1SP2DcQUSoFYdlQAgwk4ko=,iv:/i2Kl2mZOaFiA/ONQE/8sg5cwXGuOCLxLLw1Eihlmcc=,tag:WNjhkp8Bldvav+5TnHgm0w==,type:str]
+    lastmodified: "2023-02-13T21:44:03Z"
+    mac: ENC[AES256_GCM,data:9PhiKXswa21iIe7CF33Smu2oz/avrDF0AStdUTnpBCDUFciXFRfrJ7g0HDLgKFX2Akj7u5pxW+JbJTEIHwuqHhZ34T4HwH70o1H0bKdxhzCnr8X/DXjfBjy7RDk0HfDjLv9LU+ByFryPbB7cAfmqLikeCmkilwZpZkYNRw3OMO0=,iv:kg71vCWDHVY4ZMZegaU8+wgCRDkqG11LN1LxAGPPf6o=,tag:6Vj3gKS9GnPcyeOfR4kOpA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
