--- a/ansible/inventory/host_vars/k8s-worker3.sops.yml
+++ b/ansible/inventory/host_vars/k8s-worker3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:IIDuUS+b,iv:gUiZXrEIdtexVuwkht084BYBAxGG+lc9bbLPbx4WWxQ=,tag:ldE3l2pHYQvuSKVNDY7ooQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:8Z8+loBVDShX3TM=,iv:15bKO5616wCjEP23vclaHqrLMnaI27cue1fzoxe+97s=,tag:hTQ095/U63ARurTf0WzmYQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:s7Vkt13crN6tnm1PSywlyg==,iv:NpUeiopckV7V+L1y5FdaS3gU6fF6Sb/pWYjiAM7E9dA=,tag:cUE5af48sFaiD2H/qU1Vqw==,type:str]
+kind: ENC[AES256_GCM,data:QDA6MkNg,iv:Pr+gjKNGexD8XY+3Q0KPgXzTcFm/7KkA5RH39rVjUN4=,tag:LAZvjQmBaFUXGv+o1Xh/jA==,type:str]
+ansible_user: ENC[AES256_GCM,data:wMTQWPzvEIn/2bU=,iv:oHFZGme90OtKvEzIG9fhOAewiAW9xTksX5ZomirOHlQ=,tag:/z9359L0bvj2vBw63PF+oA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:7x08YEUejsV7taoNysrjwg==,iv:br5Re7NOwzpevVRfjOyofDORw82rXxnXHRXpnhVy0Eg=,tag:HXobOKctmViP/2Oq8WjemQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1vf3lpxn7ff7nghesqm56g6jnvne82gps5ytplxxw62mg9wsy6pnqt0p4fr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWdGtkcS9jVW5Mc0RNemZW
-            TDZHWUpFaWlqL2lLQ2EwMXZvaXdiMjdkRENVCkdZV3JHY3haRWs1SExEYUpKTWNB
-            cFliOUorREE2L3JaODAxSndRT3JmdHMKLS0tIFJLZEpZWlJGM2NqQml0a0cybUox
-            Zlloa1pHbTc0OVF5ZE5nZlVnMFNlbnMKasC49wHVb/nIB+bT6OGJgmJtCSztk1d7
-            cE0xPNZSK6VGZ1IYNrADO0LomR+6X/i8qZUOuAG6IXVVZLUEHF9gCw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1QUVDWmkydVFnNG5XQWZW
+            dXZJcC92L3dqd2huM2dDUU9Rb1JuMEIzbXdnClBuRm53ZnNpT05wMjNuSVlUYnIz
+            TFBVa0FJUTBRZzhtb0NWSWpTWEpYNmcKLS0tIHhwZVREUGxSVDdyNG9paXJSQlVL
+            Qnc2QzlyZUkxbFl6SlQ2U0U4SmVWQmsKvAI1BqtxROrTPYbEKxF1Bat9/ODSJx9/
+            CQffNHcL68hxX1cCIuhSLEpXkvFk0wv+4Om5rOaZfyu8ZFCJKjXkLg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T20:32:35Z"
-    mac: ENC[AES256_GCM,data:F/6tK6nTu+vG40XNlkIaW8WWquojMri/HwFzvCLzzcMWmh6TWUfBPvWLBDmqhXcCP5NaWEH5GXGCrrLxiAOibP89Ss7kFcbN1p56Bl7h3yFSwuuedIAeTP9eOF3NKt+YSyjShQdRRDh8YfqXRHqBnKWBSHI5soGQ03jeWynTznc=,iv:V2jVcKZthKAp2HuZFwm1KZ8apFJPTBnovsq/dtHa6nI=,tag:jv5blTKTzORXAa/+/5ikVw==,type:str]
+    lastmodified: "2023-02-13T21:44:03Z"
+    mac: ENC[AES256_GCM,data:aK2HMP2Vn5KOetsddlARUy1ssgnKjGxGbyuah/Ffo9AdtIgDQmoWh25SG39lNb3oeeWfqrhW4Hiwwx7wU8IPyhNX2W+FQDMJUUwRt4USg3VZzIVPxoQiv8Txrpgnf54ZUApR2URAjg08tqxgxhT7jlSbFpL4AATS5Wj2s2R8Mgg=,iv:9RKcjcRF5ZvqgPuxPCwM2ZTUCTdR7HMj7AS9q9LKwSU=,tag:nYjQVMmVIUYVhG/fS1y9vQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
