--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Czo5kCGgecBmU3UgOlaavnmpjhM=,iv:XGk8XZ8R8/sRnR23NNoBOWLK+2MchsEWjeL70Kmabm8=,tag:wA76NXxP585/T8w05ywSfA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:fgz7iMSuil70joiVlsPGuXFODD6aJF1I0ZJ8knAiJ8H8IDghQg==,iv:nWKsH5kZgZWXo/+kAclBpGz7SupvJ8qLhdW47NTSMBs=,tag:TraxMBsXckxipYBeRBUMiw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:tiNATyWpNTu4b2eJpJvt,iv:Xh6BtPp0wCwfydZ439ENMOpMiLPrwzhVJA8huXnKeoE=,tag:eS0pC1RaQ4cYBn68lUSpdQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:sO3xzl08UZa7yN5r/e0BLuseLkE=,iv:KohQZQyariBbS+uP7haXgQSkRgbeJP7UtKiau0IerKM=,tag:67O4fKoJ+uls3++RQRcKjA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:ix10w+kWJxGcjueWwlit7TleQ63Mu+bz6qbO7cr9BEOgU5Qaew==,iv:C1meHPXclAxEv2eXmT17jVbhhHx57ssp1gzfy5nCMBk=,tag:z+RAWHCfiU0DjgeunfujwQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:rH3cBg3CNWKXQq6CJgSK,iv:RYyGLZcNkFKl1MRTkUCqHqycjRCTZ3yPX/SJ5P7BmFQ=,tag:Yhl32ACz4U+TWDf4vu9YRA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1vf3lpxn7ff7nghesqm56g6jnvne82gps5ytplxxw62mg9wsy6pnqt0p4fr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlWVdTd2dWUXhvQWZLK0dj
-            VnRCR0h6Q3BsVm5VSzViSXlTTmdKZ1dtdzF3CnNMTThRRGVWOTMyVW0rRHNudCt3
-            ZTZJK1c1Q0g1dkZBb2dKVWd2azlhUW8KLS0tIDAvSllDcjVCMmZmMm1INytBK2J1
-            L3FrWHVaeWZVdk9SVThReklUN1NqUzQK+qhn6LY8ia2skckDbomba5T5lAhtZtmw
-            8N5epvfiWRrGShTtgq00d5bmn1cyuLcjtQubKSDT/PBx1vmr2dp1tw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlaW9QLzEwcHZUVUZIYUhP
+            cWFEY0svUjgxZGFhNmJ1Z0NhVDE3ejBRNjA0CnM4SnBHU1Vwc040VzlqSjRwSTZk
+            dnh5MHJWWkh3Zm1TaHBRTk8rdEUvS0EKLS0tIFEveXNxRVJpOHlHZkhUeEpCUUw5
+            WTBCWWc2eDlqR1J6VEpFa3NWR2pGOHMK8Npv+vNMnwGmfWgwpKECvyYdbptQB15Z
+            ZEnz2SMg6boNW69TB1P9o+id5R0P9ZlJ28Lb6ecwzmESGf69c3IOEw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T20:32:35Z"
-    mac: ENC[AES256_GCM,data:CCQBWhRINjOHbkNeBDoIpoxOdeLBEFgjiEgD0YFOX6AjU40dUSDpE5QxHsBGCs5kLsyo0lWEIzg5DHxsG3DDdxAfnDkBjrR96u/80DKhI29dVuqLZ0z1unZKUpSC61SgSPIRTo1Kv5hkapdXz6pkNOJS1gGzrVTBs8+8dz8nRXE=,iv:ik7q9JGmS4IRnAmYrEoC43LhHOnZfq2hZyIX7twk0CM=,tag:chyKQtYy1EBXjjjEl3reYg==,type:str]
+    lastmodified: "2023-02-13T21:44:03Z"
+    mac: ENC[AES256_GCM,data:GKNyVQlHubBeygmb0BXd5nmz40MpJdyC2hGbhmh4Xrlhos1Xu81/EW5LH/xkJXD9imWvawosSAhSA8yzQ2NUn/Y0lOcXeA8eENxNRR/42yWTwIJ+ykN4oS5nzKv4UeVJSAFMXOlUIuBIbOHQfDU/qNuSRWV2OR4qGgAUrxJiT5I=,iv:fP3dF/e5hQy17SV6A0n9xUWZM9079rO/0ZMPB7D2Ek0=,tag:Q5Ps8Er2q3j6/+Sl+05Cyg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
