--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:p8LvsLyQqyjtog==,iv:c/8l5uX3kGdp96JatZtQcMTIXyODwL1ETAhsPROqcgI=,tag:wRE2jtz/dIyPP/PLl08Yzw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:oOVjz6Z1rF8OGeySe+4jS9PjVvA=,iv:xMaghVqO1rJSgXgLl1gEw3g18pxJcY6eNlOxrgEkxXA=,tag:NAwwNfQexrNTsPG1gqpixg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:oSWcy2kvot9dVQ==,iv:H7ttm2Uf02dy1CUk/Eq2sDo0deos/J2DgzmbiB9zW1Y=,tag:HNFS1LM95f+yHUkbNVmFwQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:t+kKbWFCTNiYngZ9ijvyoihvzLA=,iv:m7XQwCGdLZ1hdoFLRR4SxSXJKU/LFZoBsAdAcWg/cXw=,tag:P8lFSyKmzE1UjUXv+2zPTg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1vf3lpxn7ff7nghesqm56g6jnvne82gps5ytplxxw62mg9wsy6pnqt0p4fr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaZUQybi95NzlzSGVhTEFp
-            N0oxYWFraGpFbnRldm54WHpKTkJJdCs5OVhRCmFZUUxzQVZ6a1V4RDgwUU81UzI2
-            cUtTUTJockkzOEpuM2dpS0VvMVRsZ1kKLS0tIC9PUm9yQ0l6Q0lDSHRERWQwSzNH
-            YlFPelN0bjlHbkUrMVBteVFhQklyWXcKGAoOLnVD5W3e89ShEQhcJ/d6eaxGhBVP
-            kmTEnFYG7+XgZG46Rrcq5wsKDX6N+f65EPkREPs8QYcQBDd6UcGOHA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBieS9EeXk0TG9jK1ZTQ1p1
+            YlJwallFTmhqUzRRanZOSEE3eWI4RkVFYUNrCkxvNHpaZWNXNmhNVlNTSmhZWnh4
+            SStEbEVIWStYb2U4QWNBUE8vOEd6M0UKLS0tIERNOGlMeU1RbXg1S1hXUEtGVFRz
+            QWFNSTQ2R3puSi8vcndOWW5JdFd6ZFkKI0I3N4fh2wb5VyIg7+zPX5Oe8xFONFbi
+            Qk1IHZ/RADwDk95g+9+xy4bG80oo3w4INMcO1XIDbYdVZHvuBTEV7w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T20:32:35Z"
-    mac: ENC[AES256_GCM,data:YbNGJl3ft6jxEgtchKTlLZH3UnDDlqB3acNcEqcPZyDAdTMKlyNjIvztKSBKbJSRuchfiMeI/Su/IxFaW3txTJVAQiTpsSScIqWlVL6a7KfuIrC9kJlgpM+r0vlvK80LseBO7bFFvkTSJ0ErIKOJhEATl7YfJKfzjLDz1tOzXbQ=,iv:F5ruuzdKfHDS8cHNpTzMf1D0Huc4lG/E83NTgH0sa1c=,tag:l9mxCqpbLu+tUtvHLerAbQ==,type:str]
+    lastmodified: "2023-02-13T21:44:03Z"
+    mac: ENC[AES256_GCM,data:0GUNIezsEB8EWo/5455oczz/dqgFyNkgnacya6bsHgdOxZ5iyoY2T+hkPpk2qomTKNpw4ZarqVmMapwAjNUUE+pDap2B3hVfNle6Q7tLByM/mCk+29ddrX31RugTrDg9gD39gLa4IJnnXfzrSQ85mUkdW6lkIkVAQeN9PMQ5xjs=,iv:te6RDeE8jEts0fyJuACK18qxTf/scmgqo1uzRMeF7MM=,tag:DGnYSd5YMytx9daBp8pz5A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
