--- a/ansible/inventory/host_vars/k8s-controller1.sops.yml
+++ b/ansible/inventory/host_vars/k8s-controller1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:KrzzvesM,iv:UtShqS6C3kBw6uFhQiRq6cBM8eZD9JbeBTX/yclQ1GE=,tag:J/gWkYde3XYk0engGep1jw==,type:str]
-ansible_user: ENC[AES256_GCM,data:maT0qDIRJ3RgaOs=,iv:Ek75qK0hAftIeYETUuPz+/75IAHJJNjuYP0ZMzZEZ9k=,tag:bgkyBtgpZxhTrGW5vIlzLA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:pXHbZAXGnGpxyV9qKR/qGg==,iv:BHAzVo2JCwpk+ezyQz4wk690LM9zy8IpDs3ZN2GOwOg=,tag:DhJct4fZNc0JuWNRBhyheQ==,type:str]
+kind: ENC[AES256_GCM,data:aRBf5nje,iv:xdUXWgZqSsZdGGWGhxlZRwXoy0Puiad1DKo3xywDG2o=,tag:wWOsoPpBpO0j8lFyOZV/MQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:ZxLYxrMqDNPG2ro=,iv:wucufej/0zwCryr5U+ysfmrIclkb1XxUoI4Xjsq2tmA=,tag:y4QUDwnCEWtJtphQb9oXIA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:+KvymCrEOyk80pRpqFCdbQ==,iv:DsOQn3EqvWqx6L/bHQ9imevx4Z4gO2xPnYNW+hs06lg=,tag:w4B6xbtKw1XV32T32bzRag==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1vf3lpxn7ff7nghesqm56g6jnvne82gps5ytplxxw62mg9wsy6pnqt0p4fr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3RnJVTDI2M2FpdzZ6Mmhz
-            a1djc3JYMk1taTVlOS9JaUNrVzBJWTk3ZjNJCkovMzV6ZmU1RFdGcWhXOFBsMHVF
-            R2pYcXdxN3FIWitseUxXUldPTVAvdjQKLS0tIEpxVFA1UDRBd0ErYkJxSWF3UWFa
-            bkFNNzhSQTZlNVgzZ1pnVHFWQ3NkTFkKChKddhScJ2ynMeENnO0IF29CQuNb2j1E
-            pWIZskMNZf5xH7EUzexwBS7yJypVryoo4w2sTO+2hdh32dUJU78gyg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpMU5HcGV0dzYzZWlrZUtz
+            TEx4UFBtSkhFWk9GTnZKa01aRGtOelpRZ25nCkFSSHlYQmc0elNuajZ0TzJIeDJD
+            MVdsZVpoZ3dJeHhwdXFPN2FMWVRJeE0KLS0tIDFoTElpWksrR0k0SERVU21YS1lL
+            czNDcTYrZFNZQkhwdllyS1d5WktnK3MKWh8YkRddhHJjzOiV9KH+FP27RUioJ59H
+            VZaR5dUzB42VIy3FmDGlOJ8H2+cz36oXE8y84sDf90BqKJi12h46PQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T20:32:35Z"
-    mac: ENC[AES256_GCM,data:w2obgX8EPdSt91+vaW80RQk8x+aGzEVcvANTJFsfyPejOgp0tOLGibaM/JveeRs3E4prKyymMQfeXTpNZKNNceavBuh66urKOeaWCva9zYR0mrkpr2Egy7A3dFN0ffLN2W12cPC83A6PqEQkWaSkSX26KUOExcQ1fl8vrYzQgmM=,iv:pt36SmA/Ox3oDgsRJB6TSewtJPCZvk/Cm+MT3qmnyhY=,tag:SgPGUK56EoJPRUwm/uT+Sw==,type:str]
+    lastmodified: "2023-02-13T21:44:03Z"
+    mac: ENC[AES256_GCM,data:sF8H0wpCNI4aKoGzQ50cKM8OjeIjp2dYcVvTQQ+ark0RX10wNc/ON0UXZq8R2FOV9M5QMD6thC225BzUKIdlzgsuMX4dzLfGyz3uDJ/ywnCyEk/wZZ4/mYY5IlJ70kYV2tEEYg46vW4yilpGIruBpsNpbz20BoTZ/diTvzBKNJw=,iv:gaKmY/L/7M5KKFENQ4l57r3ihzoiuoajef5wURxvgTI=,tag:dO/jdCt0MOvGgpzFOaZipw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
