--- a/kubernetes/apps/kube-system/snapshot-controller/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/snapshot-controller/app/kustomization.yaml
@@ -2,10 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-system
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./kubernetes-dashboard/ks.yaml
-  - ./goldilocks/ks.yaml
-  - ./vpa/ks.yaml
+  - ./snapshot-controller
+  - ./snapshot-validation-webhook
