--- a/kubernetes/apps/monitoring/vpa/app/kustomization.yaml
+++ b/kubernetes/apps/monitoring/vpa/app/kustomization.yaml
@@ -2,10 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: monitoring
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./kubernetes-dashboard/ks.yaml
-  - ./goldilocks/ks.yaml
-  - ./vpa/ks.yaml
+  - ./helmrelease.yaml
+labels:
+  - pairs:
+      app.kubernetes.io/name: vpa
+      app.kubernetes.io/instance: vpa
