--- a/kubernetes/apps/monitoring/goldilocks/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/goldilocks/app/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
             10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
           hajimari.io/icon: mdi:align-vertical-top
         hosts:
-          - host: &host goldilocks.devbu.io
+          - host: &host goldilocks.flexnet.cc
             paths:
               - path: /
                 type: Prefix
